--- a/IterativeMethods/source/Makefile
+++ b/IterativeMethods/source/Makefile
@@ -1,6 +1,6 @@
 CC = g++ -Wall -g
 
-poissonSolver: PoissonMatrix.o Algorithms.o Vectors.o UpperMatrix.o LowerMatrix.o PoissonSolver.o
+poissonSolver: PoissonMatrix.o Algorithms.o Vectors.o LUMatrices.o PoissonSolver.o
 	$(CC) -o $@ $+
 
 PoissonMatrix.o: PoissonMatrix.cpp classes.h
@@ -12,10 +12,7 @@ Algorithms.o: Algorithms.cpp classes.h
 Vectors.o: Vectors.cpp classes.h
 	$(CC) -c -o $@ $<
 
-UpperMatrix.o: UpperMatrix.cpp classes.h
-	$(CC) -c -o $@ $<
-
-LowerMatrix.o: LowerMatrix.cpp classes.h
+LUMatrices.o: LUMatrices.cpp classes.h
 	$(CC) -c -o $@ $<
 
 PoissonSolver.o: PoissonSolver.cpp classes.h
